# reddit-topics-lakehouse

./: Jenkinsfile  LICENSE  Makefile  README.md  databricks.yml  pyproject.toml  requirements-dev.txt  requirements.txt
conf/: logging.yaml  pipeline.yml
docs/: architecture.md  bi_integration.md  data_dictionary.md  deployment.md
notebooks/exploration/: 01_data_profiling.py
resources/clusters/: job_cluster.yml
resources/jobs/: batch.job.yml  inference.job.yml
scripts/: generate_sample_data.py
sql/: gold_views.sql
sql/dashboards/: reddit_topics_dashboard.sql
src/reddit_lakehouse/: __init__.py  config.py
src/reddit_lakehouse/common/: __init__.py  io.py  logging.py  schemas.py  spark.py  tables.py
src/reddit_lakehouse/governance/: __init__.py  unity_catalog.py
src/reddit_lakehouse/ingestion/: __init__.py  bronze.py  download.py
src/reddit_lakehouse/ml/: __init__.py  batch_inference.py  engagement.py  features.py  sentiment.py  topic_modeling.py
src/reddit_lakehouse/pipelines/: __init__.py  _common.py  run_batch_inference.py  run_bronze.py  run_gold.py  run_ml_training.py  run_setup.py  run_silver.py
src/reddit_lakehouse/quality/: __init__.py  checks.py
src/reddit_lakehouse/transform/: __init__.py  gold.py  silver.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_features.py  test_gold.py  test_quality.py  test_schemas.py  test_silver.py
